# parallel-prime-sieve-RP2350-cluster

./: .gitignore  CMakeLists.txt  README.md  common.c  common.h  master.c  sieve.c  sieve.h  slave.c
monte-carlo/: master.c  slave.c
sieve/: master.c  slave.c
